--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "owenmelbz/nova-radio-field": "^1.0",
+        "phpoffice/phpspreadsheet": "^1.27",
         "silvanite/novafieldcheckboxes": "^1.2",
         "tymon/jwt-auth": "^1.0"
     },
