--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "owenmelbz/nova-radio-field": "^1.0",
         "phpoffice/phpspreadsheet": "^1.27",
         "silvanite/novafieldcheckboxes": "^1.2",
+        "techouse/select-auto-complete": "^1.4",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
