--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "owenmelbz/nova-radio-field": "^1.0",
         "phpoffice/phpspreadsheet": "^1.27",
         "predis/predis": "^2.1",
+        "sereny/nova-permissions": "^1.2",
         "silvanite/novafieldcheckboxes": "^1.2",
         "tymon/jwt-auth": "^1.0"
     },
