--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "dniccum/phone-number": "^1.0",
         "emilianotisato/nova-tinymce": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
+        "ganyicz/nova-callbacks": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/nova": "~4.0",
